[web] fix orientation change on iOS PWA

--- a/web/src/css/App.less
+++ b/web/src/css/App.less
@@ -60,10 +60,10 @@ a {
     display: flex;
     align-items: stretch;
     min-height: 100dvh;
-    &.horizontal {
+    &.landscape {
         flex-direction: row;
     }
-    &.vertical {
+    &.portrait {
         flex-direction: column;
         height: auto;
         .slot-cities {
